--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,23 @@
 handlebars.suffix=.html
 handlebars.cache=false
 handlebars.expose-session-attributes=true
+
+# h2 console 사용 설정 (path 기본값은 /h2-console)
+spring.h2.console.enabled=true
+spring.h2.console.path=/db-console
+
+# DB Connection
+spring.datasource.url=jdbc:h2:mem://localhost/~/java-qna;MVCC=TRUE;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# 방언 설정
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# 쿼리 실행 보기
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# 서버 시작 시 테이블 상태 설정(in-memory 경우, 기본값은 create-drop)
+spring.jpa.hibernate.ddl-auto=create-drop
