--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,11 @@ repositories {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa') // Spring-boot JPA 연동
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.hibernate:hibernate-java8')
     compile('pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.1')
-    runtime('com.h2database:h2')
+    runtime('com.h2database:h2') // h2 DB 연동
     runtime('net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.assertj:assertj-core:3.10.0')
