Add User logout func
- 로그아웃 기능 구현
- 로그인 유무에 따른 상단 메뉴 처리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 handlebars.suffix=.html
 handlebars.cache=false
+
+# Session data를 Model에 넣어 Template Engine에 연결하는 설정 (기본값은 false)
 handlebars.expose-session-attributes=true
 
 # h2 console 사용 설정 (path 기본값은 /h2-console)
@@ -21,3 +23,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # 서버 시작 시 테이블 상태 설정(in-memory 경우, 기본값은 create-drop)
 spring.jpa.hibernate.ddl-auto=create-drop
+
