Refactor User & Session
- User 관련 기능들 낮은 수준의 예외처리
- Session 관련 기능 util로 추출
- Session tracking mode 변경(URL상 JSessionID 노출 제거)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # 서버 시작 시 테이블 상태 설정(in-memory 경우, 기본값은 create-drop)
 spring.jpa.hibernate.ddl-auto=create-drop
 
+# 세션 tracking mode 설정(기본값은 URL)
+server.servlet.session.tracking-modes=cookie
+
