--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.hibernate:hibernate-java8')
     compile('pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.1')
+    compile ('io.springfox:springfox-swagger2:2.9.2')
+    compile ('io.springfox:springfox-swagger-ui:2.9.2')
     runtime('com.h2database:h2') // h2 DB 연동
     runtime('net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1') // Spring-boot의 기본 log가 logback
     testCompile('org.springframework.boot:spring-boot-starter-test')
